# MBU_Formulardata_ATS

./: .gitignore  main.py  main_og.py  pyproject.toml
.github/workflows/: Linting.yml
formular_data_sharepoint_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
helper_functions/: helper_functions.py
helpers/: config.py  formular_mappings.py  get_and_store_alerts.py  helper_functions.py  smtp_util.py
mbu_formulardata_ats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
process_template_dadj.egg-info/: PKG-INFO
processes/: error_handling.py  helper_functions.py  item_retriever.py  process_item.py  queue_handler.py
