[project]
name = "process-template-dadj"
version = "0.1.0"
description = "dadj test project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.1.0" }